tests/fixtures/invalid/e004/empty_scenario.spec
behavior empty_steps "Empty Scenario" {
  contract """test behavior"""
  scenario "empty flow" {
  }
}
